# my-claude-agent

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  run_tests.sh
notebooks/: explore_tools.ipynb  run_agent.ipynb
sandbox/: biomedical_research.ipynb  explore_tools.ipynb  research.ipynb  run_agent.ipynb  web_research.ipynb
src/open_claude_agent/: __init__.py  bash_tool.py  claude_agent.py  claude_harness.py  memory_tool.py  prompts.py  skill_loader.py  test.ipynb  utils.py
src/open_claude_agent/scratchpad/: hello.txt
src/open_claude_agent/skills/: MIGRATION.md  QUICKSTART.md  README.md  requirements.txt
src/open_claude_agent/skills/arxiv-search/: SKILL.md  arxiv_search.py
src/open_claude_agent/skills/pubmed-search/: SKILL.md  pubmed_search.py
src/open_claude_agent/skills/web-research/: SKILL.md
src/open_claude_agent/tools/: __init__.py  bash_tool.py  memory_tool.py  text_editor_tool.py
tests/: conftest.py  test_agent_integration.py  test_skill_loader.py  test_skills_path_resolution.py
